properly porting utilities first
Signed-off-by: Stefano Braghin <stefano.braghin@gmail.com>