@@ -6,30 +6,9 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-test {
-    useJUnitPlatform()
-    minHeapSize = "5g"
-    maxHeapSize = "10g"
-
-    testLogging {
-        events 'failed'
-        exceptionFormat 'short'
-
-        showCauses true
-        showExceptions true
-        showStackTraces true
-        showStandardStreams false
-    }
-}
 
 group = 'com.ibm.research.drl.dpt'
 version = '6.0.0'
@@ -65,15 +44,10 @@ ext {
     commons_validator_version = '1.7'
     pdfbox_version = '2.0.24'
 
-    scala_version = '2.12'
-    spark_version = '3.0.1'
+    scala_version = '2.13'
+    spark_version = '3.2.3'
 
     poi_version = "5.2.2"
-}
-
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
 }
 
 dependencies {
@@ -86,7 +60,7 @@ dependencies {
     implementation 'org.lz4:lz4-java:1.8.0'
 
     implementation 'commons-cli:commons-cli:1.4'
-
+    implementation "org.apache.commons:commons-csv:${commons_csv_version}"
 
     implementation "org.apache.spark:spark-core_${scala_version}:${spark_version}"
     implementation "org.apache.spark:spark-sql_${scala_version}:${spark_version}"
@@ -101,4 +75,26 @@ dependencies {
 
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_launcher_version}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit_jupiter_version}"
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+test {
+    useJUnitPlatform()
+    minHeapSize = "5g"
+    maxHeapSize = "10g"
+
+    //jvmArgs '--add-exports java.base/sun.nio.ch=ALL-UNNAMED'
+
+    testLogging {
+        events 'failed'
+        exceptionFormat 'short'
+
+        showCauses true
+        showExceptions true
+        showStackTraces true
+        showStandardStreams false
+    }
 }
